@@ -23,8 +23,10 @@ apport (0.92) UNRELEASED; urgency=low
   * doc/package-hooks.txt: Do not document UnsupportableReason, since it does
     not make sense to set it in package hooks (it is checked before calling
     the hooks). Hooks should use UnreportableReason only.
+  * apport/ui.py, test_run_crash_package(): Check that 'Package' problem
+    reports collect additional information, too.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 24 Jul 2007 16:24:51 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 24 Jul 2007 16:44:58 +0200
 
 apport (0.91) gutsy; urgency=low
 
